Fix package name

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,17 +13,17 @@ knitr::opts_chunk$set(
 )
 ```
 
-# flowchaRt
+# consoRt
 
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 
-The goal of flowchaRt is to ...
+The goal of consoRt is to ...
 
 ## Installation
 
-You can install the development version of `flowchaRt` from GitHub:
+You can install the development version of `consoRt` from GitHub:
 
 ``` r
-devtools::install_github("flowchaRt")
+devtools::install_github("gerkelab/consoRt@dev")
 ```
 
