--- a/inst/consort_template.tex
+++ b/inst/consort_template.tex
@@ -1,29 +1,15 @@
-%\documentclass[varwidth, border={0 0 0 0}]{standalone}
-%\documentclass[border={0 0 0 0}]{standalone}
 \documentclass[10pt,a4paper]{standalone}
 \usepackage[usenames,dvispnames,svgnames,table]{xcolor}
-\usepackage{multirow}
 \usepackage{helvet}
-\usepackage{amsmath}
-\usepackage{rotating}
-\usepackage{graphicx}
 \renewcommand{\familydefault}{\sfdefault}
-\usepackage{setspace}
-\usepackage{caption}
-\captionsetup{labelformat=empty}
 \usepackage{tikz}
-\usetikzlibrary{positioning,shapes,arrows,calc,fit,decorations.pathmorphing,shapes.geometric}
-\usepackage{centernot}
+\usetikzlibrary{positioning,calc}
 \setlength{\tabcolsep}{2pt}
 
 \begin{document}
 \tikzset{ module/.style={draw, rectangle},label/.style={ } }
-\tikzstyle{block1} = [rectangle, draw, text width=5em, text centered, rounded corners, minimum height=4em]
-\tikzstyle{block2} = [rectangle, draw, text width=8em, text centered, rounded corners, minimum height=4em]
 
-%\begin{tikzpicture}[node distance = 2cm, auto]
 \begin{tikzpicture}[>=latex]
-%\begin{tikzpicture}
 
 \node [rectangle,draw] (1E) {Assessed for eligibility (n=600)};
 \node [rectangle,draw, below right =10pt and -50 pt of 1E, align=left] (Ex) {Excluded (n=2) \\
