--- a/inst/consort_template.tex
+++ b/inst/consort_template.tex
@@ -1,9 +1,10 @@
 \documentclass[10pt,a4paper]{standalone}
 \usepackage[usenames,dvispnames,svgnames,table]{xcolor}
 \usepackage{helvet}
+\usepackage{amsmath}
 \renewcommand{\familydefault}{\sfdefault}
 \usepackage{tikz}
-\usetikzlibrary{positioning,calc}
+\usetikzlibrary{positioning,shapes,arrows,calc,fit,decorations.pathmorphing,shapes.geometric}
 \setlength{\tabcolsep}{2pt}
 
 \begin{document}
@@ -11,16 +12,18 @@
 
 \begin{tikzpicture}[>=latex]
 
+
 \node [rectangle,draw] (1E) {Assessed for eligibility (n=600)};
+\node [left = of 1E, gray] (W) {Enrollment};
 \node [rectangle,draw, below right =10pt and -50 pt of 1E, align=left] (Ex) {Excluded (n=2) \\
   \begin{tabular}{>{\bfseries}r l}
-    2 & Ineligble \\
+    2 & Ineligible \\
     0 & Declined \\
     0 & Other
   \end{tabular}
   };
 \node [rectangle,draw, below =80 pt of 1E] (1R) {Randomized (n=598)};
-
+\node [draw = white , fit={(1E)(Ex)(1R)}, inner sep=0.5cm, text=gray] (W2) {};
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ALLOCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -29,8 +32,8 @@
     188 & Received intervention \\
     95  & Did not receive intervention \\
     & \begin{tabular}{>{\bfseries}r l}
-        X & Did not receive reason 1 ... \\
-        Y & Did not receive reason 2 ...
+        X & Did not receive reason 1 \\
+        Y & Did not receive reason 2
       \end{tabular}
   \end{tabular}};
 \node [rectangle,draw,below right =30pt and -15 pt of 1R, align=left] (1P) {Allocated to placebo (n=300) \\
@@ -38,12 +41,13 @@
     0 & Received placebo \\
     0 & Did not receive placebo \\
     & \begin{tabular}{>{\bfseries}r l}
-        X & Did not receive reason 1 ... \\
-        Y & Did not receive reason 2 ...
+        X & Did not receive reason 1 \\
+        Y & Did not receive reason 2
       \end{tabular}
   \end{tabular}
   };
-\node (X) at ($(1I)!0.5!(1P)$) [gray, align=center] {Allocation};
+\node [draw = white , fit={(1I)(1P)}, inner sep=0.5cm, text=gray] (X) {Allocation};
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % FOLLOW-UP
@@ -51,28 +55,28 @@
 \node [rectangle,draw, below = of 1I, align=left] (IF) {
 Lost to follow-up (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
-    X & Lost reason 1 ... \\
-    Y & Lost reason 2 ...
+    X & Lost reason 1  \\
+    Y & Lost reason 2
   \end{tabular} \\
 Discontinued intervention (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
-    X & Discontinued reason 1 ... \\
-    Y & Discontinued reason 2 ...
+    X & Discontinued reason 1  \\
+    Y & Discontinued reason 2
   \end{tabular}
   };
 \node [rectangle,draw, below = of 1P, align=left] (PF) {
 Lost to follow-up (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
-    X & Lost reason 1 ... \\
-    Y & Lost reason 2 ...
+    X & Lost reason 1  \\
+    Y & Lost reason 2
   \end{tabular} \\
 Discontinued intervention (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
-    X & Discontinued reason 1 ... \\
-    Y & Discontinued reason 2 ...
+    X & Discontinued reason 1  \\
+    Y & Discontinued reason 2
   \end{tabular}
   };
-\node (Y) at ($(IF)!0.5!(PF)$) [gray, align=center] {Follow-Up};
+\node [draw = white , fit={(IF)(PF)}, inner sep=0.5cm, text=gray] (Y) {Follow-Up};
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ANALYSIS
@@ -83,8 +87,8 @@ Analysed (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
     X & Excluded from analysis\\
     & \begin{tabular}{>{\bfseries}r l}
-        X & Exclusion reason 1 ... \\
-        Y & Exclusion reason 2 ...
+        X & Exclusion reason 1  \\
+        Y & Exclusion reason 2
       \end{tabular}
   \end{tabular}
   };
@@ -93,13 +97,12 @@ Analysed (n=XX) \\
   \begin{tabular}{>{\bfseries}r l}
     X & Excluded from analysis\\
     & \begin{tabular}{>{\bfseries}r l}
-        X & Exclusion reason 1 ... \\
-        Y & Exclusion reason 2 ...
+        X & Exclusion reason 1 \\
+        Y & Exclusion reason 2
       \end{tabular}
   \end{tabular}
   };
-\node (Z) at ($(IA)!0.5!(PA)$) [gray, align=center] {Analysis};
-
+\node [draw = white , fit={(IA)(PA)}, inner sep=0.5cm, text=gray] (Z) {Analysis};
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PATHS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
